syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting{
    string first_name =1; // 1 is defined the tag first field in the message
    string last_name =2; // 2 is defined the tag first field in the message
}

message GreetManyTimesRequest{
    Greeting greeting =1;
}

message GreetManyTimesResponse{
    string result =1;
}


service GreetService{
    
    rpc GreetManyTimes(GreetManyTimesRequest) returns ( stream GreetManyTimesResponse){};
}